# ChangeLog for sys-apps/man-pages
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/man-pages/ChangeLog,v 1.149 2010/10/11 18:35:09 robbat2 Exp $

*man-pages-3.28 (11 Oct 2010)

  11 Oct 2010; Robin H. Johnson <robbat2@gentoo.org> +man-pages-3.28.ebuild:
  Version bump

  08 Oct 2010; Mart Raudsepp <leio@gentoo.org> man-pages-3.25.ebuild,
  man-pages-3.26.ebuild:
  Drop to ~mips

*man-pages-3.27 (22 Sep 2010)

  22 Sep 2010; Mike Frysinger <vapier@gentoo.org> +man-pages-3.27.ebuild:
  Version bump.

*man-pages-3.26 (15 Sep 2010)

  15 Sep 2010; Mike Frysinger <vapier@gentoo.org> +man-pages-3.26.ebuild:
  Version bump.

*man-pages-3.25 (08 Jul 2010)

  08 Jul 2010; Mike Frysinger <vapier@gentoo.org> +man-pages-3.25.ebuild:
  Version bump.

  09 Apr 2010; Pacho Ramos <pacho@gentoo.org> man-pages-3.23.ebuild,
  man-pages-3.24.ebuild:
  app-i18n/man-pages-es will be dropped soon due bug #295188 since provided
  manpages are old and broken.

  29 Mar 2010; Jonathan Callen <abcd@gentoo.org> man-pages-3.24.ebuild:
  Bump to EAPI=3, add prefix keywords

*man-pages-3.24 (28 Feb 2010)

  28 Feb 2010; Peter Volkov <pva@gentoo.org> +man-pages-3.24.ebuild:
  Version bump.

  08 Jan 2010; Ulrich Mueller <ulm@gentoo.org> man-pages-3.21.ebuild,
  man-pages-3.22.ebuild, man-pages-3.23.ebuild:
  Fix LICENSE, bug 299893.

*man-pages-3.23 (03 Oct 2009)

  03 Oct 2009; Mike Frysinger <vapier@gentoo.org> +man-pages-3.23.ebuild:
  Version bump.

*man-pages-3.22 (26 Jul 2009)

  26 Jul 2009; Mike Frysinger <vapier@gentoo.org> +man-pages-3.22.ebuild:
  Version bump.

*man-pages-3.21 (27 Apr 2009)

  27 Apr 2009; Mike Frysinger <vapier@gentoo.org> +man-pages-3.21.ebuild:
  Version bump.

*man-pages-3.20 (31 Mar 2009)

  31 Mar 2009; Mike Frysinger <vapier@gentoo.org> +man-pages-3.20.ebuild:
  Version bump.

*man-pages-3.19 (25 Feb 2009)

  25 Feb 2009; Mike Frysinger <vapier@gentoo.org> +man-pages-3.19.ebuild:
  Version bump.
