@@ -1,6 +1,11 @@
 # ChangeLog for sys-apps/man-pages
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/man-pages/ChangeLog,v 1.149 2010/10/11 18:35:09 robbat2 Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/man-pages/ChangeLog,v 1.150 2010/10/20 21:50:34 vapier Exp $
+
+*man-pages-3.29 (20 Oct 2010)
+
+  20 Oct 2010; Mike Frysinger <vapier@gentoo.org> +man-pages-3.29.ebuild:
+  Version bump.
 
 *man-pages-3.28 (11 Oct 2010)
 
